src/main/kotlin/cn/yangtuooc/swag/SwagParser.java
// Generated from /Users/yangtuo/projects/open-source/gin-endpoints/src/main/kotlin/cn/yangtuooc/swag/SwagParser.g4 by ANTLR 4.13.1
package cn.yangtuooc.swag;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class SwagParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		TITLE=1, VERSION=2, DESCRIPTION=3, TAG_NAME=4, TAG_DESCRIPTION=5, TAG_DOCS_URL=6, 
		TERMS_OF_SERVICE=7, CONTACT_NAME=8, CONTACT_URL=9, CONTACT_EMAIL=10, LICENSE_NAME=11, 
		LICENSE_URL=12, HOST=13, BASE_PATH=14, SECURITY_DEFINITIONS_BASIC=15, 
		EXTERNAL_DOCS_DESCRIPTION=16, EXTERNAL_DOCS_URL=17, QUERY_COLLECTION_FORMAT=18, 
		SCHEMA=19, DESCRIPTION_MARKDOWN=20, ID=21, TAGS=22, SUMMARY=23, ACCEPT=24, 
		PRODUCE=25, PARAM=26, SECURITY=27, SUCCESS=28, FAILURE=29, RESPONSE=30, 
		HEADER=31, ROUTER=32, MIME=33, IDENTIFIER=34, PARAM_TYPE=35, DATA_TYPE=36, 
		COLLECTION_FORMAT=37, ATTRIBUTES=38, HTTP_METHODS=39, EXTENSION_MARK=40, 
		SLASH=41, FLOAT=42, INTEGER=43, LEFT_PAREN=44, RIGHT_PAREN=45, LEFT_BRACE=46, 
		RIGHT_BRACE=47, STAR=48, COLON=49, LEFT_BRACKET=50, RIGHT_BRACKET=51, 
		NULL=52, TRUE=53, FALSE=54, COMMA=55, SPACE=56, TEXT=57, HTTP_URL=58, 
		HTTPS_URL=59, EMAIL=60, WS=61, STRING=62, NUMBER=63;
	public static final int
		RULE_statement = 0, RULE_title = 1, RULE_version = 2, RULE_description = 3, 
		RULE_termsOfService = 4, RULE_contactName = 5, RULE_contactUrl = 6, RULE_contactEmail = 7, 
		RULE_licenseName = 8, RULE_licenseUrl = 9, RULE_host = 10, RULE_basePath = 11, 
		RULE_securityDefinitionsBasic = 12, RULE_externalDocsDescription = 13, 
		RULE_externalDocsUrl = 14, RULE_summary = 15, RULE_tags = 16, RULE_tag = 17, 
		RULE_accept = 18, RULE_produce = 19, RULE_param = 20, RULE_comment = 21, 
		RULE_isMandatory = 22, RULE_success = 23, RULE_failure = 24, RULE_response = 25, 
		RULE_header = 26, RULE_router = 27, RULE_extensions = 28, RULE_returnCode = 29, 
		RULE_path = 30, RULE_json = 31, RULE_obj = 32, RULE_pair = 33, RULE_arr = 34, 
		RULE_value = 35;
	private static String[] makeRuleNames() {
		return new String[] {
			"statement", "title", "version", "description", "termsOfService", "contactName", 
			"contactUrl", "contactEmail", "licenseName", "licenseUrl", "host", "basePath", 
			"securityDefinitionsBasic", "externalDocsDescription", "externalDocsUrl", 
			"summary", "tags", "tag", "accept", "produce", "param", "comment", "isMandatory", 
			"success", "failure", "response", "header", "router", "extensions", "returnCode", 
			"path", "json", "obj", "pair", "arr", "value"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'@title'", "'@version'", "'@description'", "'@tag.name'", "'@tag.description'", 
			"'@tag.docs.url'", "'@termsOfService'", "'@contact.name'", "'@contact.url'", 
			"'@contact.email'", "'@license.name'", "'@license.url'", "'@host'", "'@BasePath'", 
			"'@securityDefinitions.basic'", "'@externalDocs.description'", "'@externalDocs.url'", 
			"'@query.collection.format'", "'@schema'", "'@description.markdown'", 
			"'@Id'", "'@Tags'", "'@Summary'", "'@Accept'", "'@Produce'", "'@Param'", 
			"'@Security'", "'@Success'", "'@Failure'", "'@Response'", "'@Header'", 
			"'@Router'", null, null, null, null, null, null, null, "'x-'", "'/'", 
			null, null, "'('", "')'", "'{'", "'}'", "'*'", "':'", "'['", "']'", "'null'", 
			"'true'", "'false'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "TITLE", "VERSION", "DESCRIPTION", "TAG_NAME", "TAG_DESCRIPTION", 
			"TAG_DOCS_URL", "TERMS_OF_SERVICE", "CONTACT_NAME", "CONTACT_URL", "CONTACT_EMAIL", 
			"LICENSE_NAME", "LICENSE_URL", "HOST", "BASE_PATH", "SECURITY_DEFINITIONS_BASIC", 
			"EXTERNAL_DOCS_DESCRIPTION", "EXTERNAL_DOCS_URL", "QUERY_COLLECTION_FORMAT", 
			"SCHEMA", "DESCRIPTION_MARKDOWN", "ID", "TAGS", "SUMMARY", "ACCEPT", 
			"PRODUCE", "PARAM", "SECURITY", "SUCCESS", "FAILURE", "RESPONSE", "HEADER", 
			"ROUTER", "MIME", "IDENTIFIER", "PARAM_TYPE", "DATA_TYPE", "COLLECTION_FORMAT", 
			"ATTRIBUTES", "HTTP_METHODS", "EXTENSION_MARK", "SLASH", "FLOAT", "INTEGER", 
			"LEFT_PAREN", "RIGHT_PAREN", "LEFT_BRACE", "RIGHT_BRACE", "STAR", "COLON", 
			"LEFT_BRACKET", "RIGHT_BRACKET", "NULL", "TRUE", "FALSE", "COMMA", "SPACE", 
			"TEXT", "HTTP_URL", "HTTPS_URL", "EMAIL", "WS", "STRING", "NUMBER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SwagParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SwagParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public TitleContext title() {
			return getRuleContext(TitleContext.class,0);
		}
		public VersionContext version() {
			return getRuleContext(VersionContext.class,0);
		}
		public DescriptionContext description() {
			return getRuleContext(DescriptionContext.class,0);
		}
		public TermsOfServiceContext termsOfService() {
			return getRuleContext(TermsOfServiceContext.class,0);
		}
		public ContactNameContext contactName() {
			return getRuleContext(ContactNameContext.class,0);
		}
		public ContactUrlContext contactUrl() {
			return getRuleContext(ContactUrlContext.class,0);
		}
		public ContactEmailContext contactEmail() {
			return getRuleContext(ContactEmailContext.class,0);
		}
		public LicenseNameContext licenseName() {
			return getRuleContext(LicenseNameContext.class,0);
		}
		public LicenseUrlContext licenseUrl() {
			return getRuleContext(LicenseUrlContext.class,0);
		}
		public HostContext host() {
			return getRuleContext(HostContext.class,0);
		}
		public BasePathContext basePath() {
			return getRuleContext(BasePathContext.class,0);
		}
		public SecurityDefinitionsBasicContext securityDefinitionsBasic() {
			return getRuleContext(SecurityDefinitionsBasicContext.class,0);
		}
		public ExternalDocsDescriptionContext externalDocsDescription() {
			return getRuleContext(ExternalDocsDescriptionContext.class,0);
		}
		public ExternalDocsUrlContext externalDocsUrl() {
			return getRuleContext(ExternalDocsUrlContext.class,0);
		}
		public SummaryContext summary() {
			return getRuleContext(SummaryContext.class,0);
		}
		public TagsContext tags() {
			return getRuleContext(TagsContext.class,0);
		}
		public AcceptContext accept() {
			return getRuleContext(AcceptContext.class,0);
		}
		public ProduceContext produce() {
			return getRuleContext(ProduceContext.class,0);
		}
		public ParamContext param() {
			return getRuleContext(ParamContext.class,0);
		}
		public SuccessContext success() {
			return getRuleContext(SuccessContext.class,0);
		}
		public FailureContext failure() {
			return getRuleContext(FailureContext.class,0);
		}
		public ResponseContext response() {
			return getRuleContext(ResponseContext.class,0);
		}
		public HeaderContext header() {
			return getRuleContext(HeaderContext.class,0);
		}
		public RouterContext router() {
			return getRuleContext(RouterContext.class,0);
		}
		public ExtensionsContext extensions() {
			return getRuleContext(ExtensionsContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SwagParserListener ) ((SwagParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SwagParserListener ) ((SwagParserListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SwagParserVisitor ) return ((SwagParserVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_statement);
		try {
			setState(97);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(72);
				title();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(73);
				version();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(74);
				description();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(75);
				termsOfService();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(76);
				contactName();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(77);
				contactUrl();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(78);
				contactEmail();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(79);
				licenseName();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(80);
				licenseUrl();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(81);
				host();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(82);
				basePath();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(83);
				securityDefinitionsBasic();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(84);
				externalDocsDescription();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(85);
				externalDocsUrl();
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(86);
				summary();
				}
				break;
			case 16:
				enterOuterAlt(_localctx, 16);
				{
				setState(87);
				tags();
				}
				break;
			case 17:
				enterOuterAlt(_localctx, 17);
				{
				setState(88);
				accept();
				}
				break;
			case 18:
				enterOuterAlt(_localctx, 18);
				{
				setState(89);
				produce();
				}
				break;
			case 19:
				enterOuterAlt(_localctx, 19);
				{
				setState(90);
				param();
				}
				break;
			case 20:
				enterOuterAlt(_localctx, 20);
				{
				setState(91);
				success();
				}
				break;
			case 21:
				enterOuterAlt(_localctx, 21);
				{
				setState(92);
				failure();
				}
				break;
			case 22:
				enterOuterAlt(_localctx, 22);
				{
				setState(93);
				response();
				}
				break;
			case 23:
				enterOuterAlt(_localctx, 23);
				{
				setState(94);
				header();
				}
				break;
			case 24:
				enterOuterAlt(_localctx, 24);
				{
				setState(95);
				router();
				}
				break;
			case 25:
				enterOuterAlt(_localctx, 25);
				{
				setState(96);
				extensions();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TitleContext extends ParserRuleContext {
		public TerminalNode TITLE() { return getToken(SwagParser.TITLE, 0); }
		public TerminalNode TEXT() { return getToken(SwagParser.TEXT, 0); }
		public TitleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_title; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SwagParserListener ) ((SwagParserListener)listener).enterTitle(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SwagParserListener ) ((SwagParserListener)listener).exitTitle(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SwagParserVisitor ) return ((SwagParserVisitor<? extends T>)visitor).visitTitle(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TitleContext title() throws RecognitionException {
		TitleContext _localctx = new TitleContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_title);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(TITLE);
			setState(100);
			match(TEXT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VersionContext extends ParserRuleContext {
		public TerminalNode VERSION() { return getToken(SwagParser.VERSION, 0); }
		public TerminalNode TEXT() { return getToken(SwagParser.TEXT, 0); }
		public VersionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_version; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SwagParserListener ) ((SwagParserListener)listener).enterVersion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SwagParserListener ) ((SwagParserListener)listener).exitVersion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SwagParserVisitor ) return ((SwagParserVisitor<? extends T>)visitor).visitVersion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VersionContext version() throws RecognitionException {
		VersionContext _localctx = new VersionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_version);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(VERSION);
			setState(103);
			match(TEXT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DescriptionContext extends ParserRuleContext {
		public TerminalNode DESCRIPTION() { return getToken(SwagParser.DESCRIPTION, 0); }
		public TerminalNode TEXT() { return getToken(SwagParser.TEXT, 0); }
		public DescriptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_description; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SwagParserListener ) ((SwagParserListener)listener).enterDescription(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SwagParserListener ) ((SwagParserListener)listener).exitDescription(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SwagParserVisitor ) return ((SwagParserVisitor<? extends T>)visitor).visitDescription(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DescriptionContext description() throws RecognitionException {
		DescriptionContext _localctx = new DescriptionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_description);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(DESCRIPTION);
			setState(106);
			match(TEXT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TermsOfServiceContext extends ParserRuleContext {
		public TerminalNode TERMS_OF_SERVICE() { return getToken(SwagParser.TERMS_OF_SERVICE, 0); }
		public TerminalNode TEXT() { return getToken(SwagParser.TEXT, 0); }
		public TermsOfServiceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_termsOfService; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SwagParserListener ) ((SwagParserListener)listener).enterTermsOfService(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SwagParserListener ) ((SwagParserListener)listener).exitTermsOfService(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SwagParserVisitor ) return ((SwagParserVisitor<? extends T>)visitor).visitTermsOfService(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TermsOfServiceContext termsOfService() throws RecognitionException {
		TermsOfServiceContext _localctx = new TermsOfServiceContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_termsOfService);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(TERMS_OF_SERVICE);
			setState(109);
			match(TEXT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ContactNameContext extends ParserRuleContext {
		public TerminalNode CONTACT_NAME() { return getToken(SwagParser.CONTACT_NAME, 0); }
		public TerminalNode TEXT() { return getToken(SwagParser.TEXT, 0); }
		public ContactNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_contactName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SwagParserListener ) ((SwagParserListener)listener).enterContactName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SwagParserListener ) ((SwagParserListener)listener).exitContactName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SwagParserVisitor ) return ((SwagParserVisitor<? extends T>)visitor).visitContactName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ContactNameContext contactName() throws RecognitionException {
		ContactNameContext _localctx = new ContactNameContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_contactName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(CONTACT_NAME);
			setState(112);
			match(TEXT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ContactUrlContext extends ParserRuleContext {
		public TerminalNode CONTACT_URL() { return getToken(SwagParser.CONTACT_URL, 0); }
		public TerminalNode TEXT() { return getToken(SwagParser.TEXT, 0); }
		public ContactUrlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_contactUrl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SwagParserListener ) ((SwagParserListener)listener).enterContactUrl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SwagParserListener ) ((SwagParserListener)listener).exitContactUrl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SwagParserVisitor ) return ((SwagParserVisitor<? extends T>)visitor).visitContactUrl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ContactUrlContext contactUrl() throws RecognitionException {
		ContactUrlContext _localctx = new ContactUrlContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_contactUrl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(CONTACT_URL);
			setState(115);
			match(TEXT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ContactEmailContext extends ParserRuleContext {
		public TerminalNode CONTACT_EMAIL() { return getToken(SwagParser.CONTACT_EMAIL, 0); }
		public TerminalNode EMAIL() { return getToken(SwagParser.EMAIL, 0); }
		public ContactEmailContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_contactEmail; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SwagParserListener ) ((SwagParserListener)listener).enterContactEmail(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SwagParserListener ) ((SwagParserListener)listener).exitContactEmail(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SwagParserVisitor ) return ((SwagParserVisitor<? extends T>)visitor).visitContactEmail(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ContactEmailContext contactEmail() throws RecognitionException {
		ContactEmailContext _localctx = new ContactEmailContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_contactEmail);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(CONTACT_EMAIL);
			setState(118);
			match(EMAIL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LicenseNameContext extends ParserRuleContext {
		public TerminalNode LICENSE_NAME() { return getToken(SwagParser.LICENSE_NAME, 0); }
		public TerminalNode TEXT() { return getToken(SwagParser.TEXT, 0); }
		public LicenseNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_licenseName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SwagParserListener ) ((SwagParserListener)listener).enterLicenseName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SwagParserListener ) ((SwagParserListener)listener).exitLicenseName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SwagParserVisitor ) return ((SwagParserVisitor<? extends T>)visitor).visitLicenseName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LicenseNameContext licenseName() throws RecognitionException {
		LicenseNameContext _localctx = new LicenseNameContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_licenseName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(LICENSE_NAME);
			setState(121);
			match(TEXT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LicenseUrlContext extends ParserRuleContext {
		public TerminalNode HTTP_URL() { return getToken(SwagParser.HTTP_URL, 0); }
		public TerminalNode HTTPS_URL() { return getToken(SwagParser.HTTPS_URL, 0); }
		public LicenseUrlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_licenseUrl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SwagParserListener ) ((SwagParserListener)listener).enterLicenseUrl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SwagParserListener ) ((SwagParserListener)listener).exitLicenseUrl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SwagParserVisitor ) return ((SwagParserVisitor<? extends T>)visitor).visitLicenseUrl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LicenseUrlContext licenseUrl() throws RecognitionException {
		LicenseUrlContext _localctx = new LicenseUrlContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_licenseUrl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			_la = _input.LA(1);
			if ( !(_la==HTTP_URL || _la==HTTPS_URL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HostContext extends ParserRuleContext {
		public TerminalNode HOST() { return getToken(SwagParser.HOST, 0); }
		public TerminalNode TEXT() { return getToken(SwagParser.TEXT, 0); }
		public HostContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_host; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SwagParserListener ) ((SwagParserListener)listener).enterHost(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SwagParserListener ) ((SwagParserListener)listener).exitHost(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SwagParserVisitor ) return ((SwagParserVisitor<? extends T>)visitor).visitHost(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HostContext host() throws RecognitionException {
		HostContext _localctx = new HostContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_host);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(HOST);
			setState(126);
			match(TEXT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BasePathContext extends ParserRuleContext {
		public TerminalNode BASE_PATH() { return getToken(SwagParser.BASE_PATH, 0); }
		public TerminalNode TEXT() { return getToken(SwagParser.TEXT, 0); }
		public BasePathContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_basePath; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SwagParserListener ) ((SwagParserListener)listener).enterBasePath(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SwagParserListener ) ((SwagParserListener)listener).exitBasePath(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SwagParserVisitor ) return ((SwagParserVisitor<? extends T>)visitor).visitBasePath(this);
			else return visitor.visitChildren(this);
		}
	}
